--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,7 +21,9 @@
                             tree</a><br>
                         <a href="/4-0/manual-home?manual=providers-manual-2&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
-                            & maths content</a>
+                            & maths content
+                        </a>
+                        <br><span style="margin-left:20px;">- includes contextual updates</span>
                     </li>
                     <li>
                         <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
