test to check deployment

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototypes</h1>
+        <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
         <ul class="govuk-list govuk-!-font-size-19">
             <li>4-0
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
