--- a/app/views/4-0/manual-home.html
+++ b/app/views/4-0/manual-home.html
@@ -80,7 +80,7 @@
                 {% endfor %}
             {% endfor %}
 
-            {% if _manualHasUpdates %}
+            {% if _manualHasUpdates and myData.updatesFilter == "true" %}
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds" >
                     <!-- <div class="govuk-form-group"> -->
@@ -182,7 +182,7 @@ $(document).ready(function(){
 
     // _showUpdates.click(function (e){
     //     _checkFilters.each(function( index ) {
-    //         $(this).prop('checked', true);
+    //         $(this).attr('checked', "checked");
     //     })
     //     _checkFilters.trigger("change")
     //     e.preventDefault();
@@ -190,7 +190,7 @@ $(document).ready(function(){
 
     _clearFilter.click(function (e){
         _checkFilters.each(function( index ) {
-            $(this).prop('checked', false);
+            $(this).removeAttr('checked');
         })
         _checkFilters.trigger("change")
         e.preventDefault();
