--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,40 +6,11 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
         <ul class="govuk-list govuk-!-font-size-19">
-            <li>4-0
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/4-0/google?manual=providers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&svgflow=true&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + flowchart</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&textflow=true&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + text decision
-                            tree</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-2&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
-                            & maths content
-                        </a>
-                        <br><span style="margin-left:20px;">- includes contextual updates</span>
-                    </li>
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
-                        <a href="/4-0/manual-home?manual=employers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/4-0/google?manual=employers-manual-original&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
-                    </li>
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Training Provider Rules Heavy Edit</span><br>
-                        <a href="/4-0/guidance?resetSession=true" class="govuk-link govuk-link--no-visited-state">Funding
-                            for training apprentices in England (Heavy edit)</a>
-                    </li>
-                </ul>
+            <li>
+                <a href="/4-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-4-0</a>
             </li>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>3-0
+            <li>V-3-0
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                     <li>
                         <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
@@ -70,7 +41,7 @@
                 </ul>
             </li>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>2-0
+            <li>V-2-0
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
                     <li>
                         <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">Employer
@@ -79,7 +50,7 @@
                 </ul>
             </li>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>1-0
+            <li>V-1-0
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
                     <li>
                         <a href="/prototypes/round-1/index" class="govuk-link govuk-link--no-visited-state">Employer
