--- a/app/views/4-0/manual-page.html
+++ b/app/views/4-0/manual-page.html
@@ -18,7 +18,7 @@
     {% set _rulePrefix = "E" %}
 {% endif %}
 
-{% set _filterState = myData.filter %}
+{% set _filterState = myData.updatesFilterOn %}
 
 {% block pageStyles %}
 <style>
@@ -53,7 +53,7 @@
     {% include "../includes/manual-header.html" %}
       
     <ol class="breadcrumb-trail">
-        <li><a href="manual-home?manual={{myData.manual}}&filter=false">Contents</a></li>
+        <li><a href="manual-home?manual={{myData.manual}}&updatesFilterOn=false">Contents</a></li>
         <li class="last-child">{{section.title|safe}}</li>
     </ol>
 
@@ -445,7 +445,7 @@ $(document).ready(function(){
 
     _showUpdates.click(function (e){
         _checkFilters.each(function( index ) {
-            $(this).attr('checked', "checked");
+            $(this).prop('checked', true);
         })
         _checkFilters.trigger("change")
         e.preventDefault();
@@ -453,7 +453,7 @@ $(document).ready(function(){
 
     _clearFilter.click(function (e){
         _checkFilters.each(function( index ) {
-            $(this).removeAttr('checked');
+            $(this).prop('checked', false);
         })
         _checkFilters.trigger("change")
         e.preventDefault();
@@ -492,10 +492,10 @@ $(document).ready(function(){
         });
         // update breadcrumb link
         var _newHREF = _breadcrumbLink.attr('href')
-        if(_breadcrumbLink.attr('href').includes("filter=false")){
-            _newHREF = _breadcrumbLink.attr('href').replace("filter=false", "filter="+_filtered);
-        } else if(_breadcrumbLink.attr('href').includes("filter=true")) {
-            _newHREF = _breadcrumbLink.attr('href').replace("filter=true", "filter="+_filtered);
+        if(_breadcrumbLink.attr('href').includes("updatesFilterOn=false")){
+            _newHREF = _breadcrumbLink.attr('href').replace("updatesFilterOn=false", "updatesFilterOn="+_filtered);
+        } else if(_breadcrumbLink.attr('href').includes("updatesFilterOn=true")) {
+            _newHREF = _breadcrumbLink.attr('href').replace("updatesFilterOn=true", "updatesFilterOn="+_filtered);
         }
         _breadcrumbLink.attr('href',_newHREF)
 
